2008-04-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Revert short -Od(n) option for output
	  device ID

2008-04-06  Keishi Suenaga <skeishi@yahoo.co.jp>

	* timidity/w32_libFLAC_dll.c, timidity/w32_libFLAC_dll_g.h:
	  support new flac dll(1.2.1)

2008-04-06  Keishi Suenaga <skeishi@yahoo.co.jp>

	* timidity/common.c, timidity/speex_a.c: fix compliation
	* timidity/midi_a.c: BorlancC patch

2008-04-05  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Remove short option -Od(n) for output
	  device ID because -O? option is assigned for output format
	* TiMidity(-uj).ad, interface/Makefile.am: Fix trivial typo,
	  translate into Japanese, and move to interface directory
	TODO: update man page of timidity.1
	      --output-devices=n
	      --preserve-silence
	TODO: update ja_JP.eucJP/README.xaw

2008-04-03  Keishi Suenaga <skeishi@yahoo.co.jp>

	patchs by Yair K.
	* interface/Makefile.am, bitmaps/Makefile.am, interface/arrow.xbm,
	  interface/check.xbm, interface/off.xbm, interface/on.xbm: remove

2008-04-02  Keishi Suenaga <skeishi@yahoo.co.jp>

	patchs by Yair K.
	* timidity/common.c, common.makefile.in, configure.in,
	  doc/C/README.xaw, interface/arrow.xbm, interface/check.xbm,
	  interface/Makefile.am, interface/off.xbm, interface/on.xbm,
	  interface/xaw_c.c, interface/xaw.h, interface/xaw_i.c,
	  Makefile.am, Makefile.in, script/unix2dos.sh, timidity/aiff_a.c,
	  timidity/au_a.c, timidity/common.c, timidity/flac_a.c,
	  timidity/gogo_a.c, timidity/m2m.c, timidity/midi_a.c,
	  timidity/modmid_a.c, imidity/output.h, timidity/playmidi.c,
	  timidity/raw_a.c, timidity/speex_a.c, timidity/vorbis_a.c,
	  timidity/wave_a.c: some improvements of XAW interface.
	* interface/bitmaps/arrow.xbm, interface/bitmaps/check.xbm,
	  interface/bitmaps/fast.xbm, interface/bitmaps/keydown.xbm,
	  interface/bitmaps/keyup.xbm, interface/bitmaps/off.xbm,
	  interface/bitmaps/on.xbm, interface/bitmaps/slow.xbm,